--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="form-container">
         <h1>Student Information Form</h1>
-        <form id="studentForm" action="javascript:void(0);" method="POST">
+        <form id="studentForm">
             <label for="lastName">Last Name:</label>
             <input type="text" id="lastName" name="lastName" placeholder="Ex. Dela Cruz" required>
             <div class="error-message" id="lastNameError"></div>
@@ -89,3 +89,4 @@
 <script src="script.js"></script> 
 </body>
 </html>
+
