--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <label for="profilePic">Profile Picture:</label>
             <input type="file" id="profilePic" name="profilePic">
 
+            <div id="formError" class="error-message" style="margin-bottom:10px;"></div>
             <button type="submit">Submit</button>
         </form>
     </div>
@@ -90,5 +91,6 @@
 <script src="script.js"></script> 
 </body>
 </html>
+
 
 
